src/css/tabs/osd.css
/* ... */
.tab-osd .hd_bfhdcompat_storagebox {
    border: 2px solid purple;
    position: absolute;
    top: 115px;
    height: 55px;
    right: 0px;
    width: 80px;
    pointer-events: none;
}

.tab-osd .hd_avatar_bottom {
    border-bottom: 2px solid purple;
    position: absolute;
    bottom: 33px;
    left: 0px;
    right: 0px;
}

.tab-osd .hd_avatar_storagebox_t {
    border-top: 2px solid purple;
    position: absolute;
    top: 56px;
    height: 1px;
    right: 34px;
    width: 48px;
}

.tab-osd .hd_avatar_storagebox_b {
    border-bottom: 2px solid purple;
    position: absolute;
    top: 88px;
    height: 1px;
    right: 34px;
    width: 48px;
}

.tab-osd .hd_avatar_storagebox_l {
    border-left: 2px solid purple;
    position: absolute;
    top: 56px;
    height: 35px;
    right: 80px;
    width: 1px;
}

.tab-osd .hd_avatar_storagebox_r {
    border-right: 2px solid purple;
    position: absolute;
    top: 56px;
    height: 35px;
    right: 32px;
    width: 1px;
}

.tab-osd .ntsc_bottom {
    border-bottom: 2px solid green;
    position: absolute;
    bottom: 54px;
    left: 0px;
    width: 100%;
}

.tab-osd .preview {
    /* please don't copy the generic background image from another project
     * and replace the one that @nathantsoi took :)
     */
    background: url(./../../../images/osd-bg-1.jpg);
    background-size: cover;
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
}

.tab-osd .settings label {
    display: block;
    width: 100%;
    border-bottom: 1px solid #ddd;
    margin-top: 5px;
    padding-bottom: 5px
}

.tab-osd .settings label:last-child {
    border-bottom: none;
    padding-bottom: 0;
}

.tab-osd .settings input {
    width: 75px;
    padding-left: 3px;
    height: 18px;
    line-height: 20px;
    text-align: left;
    border: 1px solid silver;
    border-radius: 3px;
    font-size: 11px;
    font-weight: normal;
}

.tab-osd .settings select {
    width: 80px;
}

.tab-osd .settings .switchery {
    margin-right: 33px;
}

.tab-osd .settings .djiCraftNameElements {
    display: block;
    width: 100%;
    border-bottom: 1px solid #ddd;
    margin-top: 5px;
    padding-bottom: 5px;
}

.no-bottom {
    border-bottom: none !important;
    padding-bottom: 0 i !important;
}

@media only screen and (max-width: 1055px) , only screen and (max-device-width: 1055px) {
    .tab-osd .content_wrapper {
        height: calc(100% - 30px);
    }
}

.osd__elements {
    margin-bottom: 3em;
}

.osd_layouts {
    display: inline-block;
    margin-bottom: 1em;
    width: auto !important;
}

.osd_search {
    float: right;
    width: auto !important;
    margin-right: 0 !important;
}

.tab-osd label > .i18n-replaced {
    display: inline-block;
    left: 108px;
    width: calc(100% - 110px);
}

.tab-osd .settings select,
.tab-osd .settings input,
.tab-osd .osd_settings .switchery,
.tab-osd .unit_wrapper {
    vertical-align: top;
}

/* Custom Element cards */
.ce-card {
    border: 1px solid #ddd;
    border-radius: 4px;
    margin-bottom: 6px;
    background: #fff;
    border-left: 3px solid #ddd;
}

.ce-card-configured {
    border-left-color: #37a8db;
}

.ce-card-collapsed {
    border-left-color: #ccc;
}

.ce-card-header {
    display: flex;
    align-items: center;
    padding: 6px 10px;
    cursor: pointer;
    gap: 8px;
    user-select: none;
}

.ce-card-header:hover {
    background: #f5f5f5;
}

.ce-card-header .ios7-switch {
    flex-shrink: 0;
}

.ce-card-name {
    font-weight: bold;
    font-size: 12px;
    white-space: nowrap;
}

.ce-card-preview {
    color: #888;
    font-size: 11px;
    flex: 1;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    text-align: right;
}

.ce-card-chevron {
    font-size: 14px;
    color: #888;
    flex-shrink: 0;
    width: 16px;
    text-align: center;
}

.ce-card-body {
    padding: 8px 10px;
    border-top: 1px solid #eee;
}

.ce-source-select, .ce-format-select {
    width: 100% !important;
}

.ce-format-select {
    margin-top: 4px;
}

.osdCustomElement_main_table {
    width: 100%;
    table-layout: fixed;
    max-width: 400px;
}

.osdCustomElement_main_table td{
    max-width: 80px;
}

.osdCustomElement_main_table select, .osdCustomElement_main_table input{
    width: 100% !important;
}

.settings .btn a{
    margin-top: 0;
    margin-bottom: 0;
    border-radius: 3px;
    color: #fff;
    font-family: 'open_sansbold', Arial, serif;
    font-size: 12px;
    text-shadow: 0 1px rgba(0, 0, 0, 0.25);
    cursor: pointer;
    transition: all ease 0.2s;
    padding: 0 9px;
    line-height: 22px;
}

.settings .btn_blue a{
    background-color: #37a8db;
    border: 1px solid #3394b5;
}

.settings .btn_danger a{
    background-color: #e2a2a2;
    border: 1px solid #e58383;
}


.settings .btn a:hover {
    background-color: #3394b5;
    transition: all ease 0.2s;
}

